src/main/kotlin/com/example/sales_crud/error/exception/BadRequestException.kt
package com.example.sales_crud.error.exception

class BadRequestException(message: String) : RuntimeException(message){}